Fixed Background Flicker

--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -9,7 +9,6 @@
     background-image: url("../images/bg-dark.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     background-position: center;
 }
 
